@@ -1486,6 +1486,9 @@ void bowl_update( Bowl *bowl, int ms, BowlControls *bc, int game_over )
         	if (bowl->block_drop_vel > vy)
         		if (config.modern || (bc->lshift!=CS_PRESSED && bc->rshift!=CS_PRESSED))
         			vy = bowl->block_drop_vel;
+        if (bowl->cpu_player && config.cpu_sfactor != 100) {
+        	vy = vy * config.cpu_sfactor / 100.0;
+        }
         if (!bowl->zero_gravity && bowl->ldelay_cur == 0) {
         	bowl->block.cur_y += vy * ms;
         	bowl->block.y = bowl_convert_cury2y(bowl);
