@@ -1,3 +1,4 @@
+- added option to customize cpu drop speed (2024/02/17 MS)
 - do not show special piece on lock delay if soft drop pressed (2024/02/17 MS)
 - properly insert/lock pieces if dropping more than one tile (2024/02/17 MS)
 
